伴随=>vtu
